--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "author": "gaoryrt",
   "license": "MIT",
   "dependencies": {
-    "emotion": "^8.0.12",
-    "gelerator": "^1.1.50",
-    "html-text-generator": "^1.1.2",
-    "vue-style-loader": "^4.1.0"
+    "gelerator": "^1.1.50"
   }
 }
