--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "gelerator": "^1.1.50"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.8.1"
+  },
+  "scripts": {
+    "build": "parcel build flip.js --out-file number-flip.min.js"
   }
 }
