--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "poi": "^12.0.0"
   },
   "scripts": {
-    "build": "poi --prod number-flip.js --format umd --module-name Flip --target node",
+    "build": "poi --prod number-flip.js --format umd --module-name NumberFlip",
     "dev": "poi --serve ./example/index.html"
   }
 }
