--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "1.1.10",
   "description": "Change number with flipping animation",
   "main": "dist/index.js",
+  "types": "dist/number-flip.d.ts",
   "repository": "https://github.com/gaoryrt/flip.git",
   "author": "gaoryrt",
   "license": "MIT",
-  "dependencies": {
-    "gelerator": "^3.0.0"
-  },
   "devDependencies": {
-    "poi": "^12.0.0"
+    "@poi/plugin-typescript": "^12.3.1",
+    "@types/poi": "^12.5.4",
+    "poi": "^12.0.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^3.9.10"
   },
   "scripts": {
-    "build": "poi --prod number-flip.js --format umd --module-name NumberFlip",
-    "dev": "poi --serve ./example/index.html"
+    "build": "poi --prod number-flip.ts --format umd --module-name NumberFlip -r ts-node/register && tsc",
+    "dev": "poi --serve ./example/index.html -r ts-node/register"
   }
 }
