--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-flip",
-  "version": "1.1.10",
+  "version": "1.2.0",
   "description": "Change number with flipping animation",
   "main": "dist/index.js",
   "types": "dist/number-flip.d.ts",
@@ -17,5 +17,8 @@
   "scripts": {
     "build": "poi --prod number-flip.ts --format umd --module-name NumberFlip -r ts-node/register && tsc",
     "dev": "poi --serve ./example/index.html -r ts-node/register"
+  },
+  "dependencies": {
+    "vue-template-compiler": "^2.7.16"
   }
 }
